# rockchip-example

./: .gitignore  README.md
camera-gstreamer/: CMakeLists.txt  README.md  build.sh  main.cpp
opencl-cv/: CMakeLists.txt  README.md  build.sh  check_opencv.cpp  main.cpp
opencl-native/: CMakeLists.txt  README.md  build.sh  main.cpp
rknn/: build-linux.sh
rknn/utils/: CMakeLists.txt
rknn/yolov8/cpp/: CMakeLists.txt
rknn/yolov8/cpp/rknpu2/: yolov8.cc
video_capture/: CMakeLists.txt  README.md  build.sh  main.cpp
video_capture_publish/: CMakeLists.txt  README.md  build.sh  main.cpp
